BUG#22393: Very wrong E(#rows(ref(const)) for key with skewed distribution - Check if we have E(#rows) for 'range' access on the smaller interval   on the same index. If yes, adjust the estimate.